# dwarf_mine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appfile  benchmark.py  benchmark.sh  benchmark_matmulcluster.py  benchmark_matmulomp.py  benchmark_othello.py  benchmark_othelloomp.py  big_input.txt  big_left.txt  big_right.txt  build.sh  build_all.sh  demo.ttyrecord  hostfile  huge_left.txt  huge_right.txt  huge_rsa_number  matrix.txt  othello_field  run.sh  run_tests.sh  set_recording_set.sh  small_input.txt  tabsToSpaces.sh  use_vampir_trace.sh
src/: BenchmarkKernel.h  CMakeLists.txt  Matrix.h  MatrixMultiplicationBenchmarkKernel.cpp  MatrixMultiplicationBenchmarkKernel.h  hello_world.cpp  main.cpp
src/benchmark-lib/: BenchmarkKernel.h  CMakeLists.txt  main.cpp
src/common/: BenchmarkResults.cpp  BenchmarkResults.h  BenchmarkRunner.cpp  BenchmarkRunner.h  CMakeLists.txt  CommandLineConfiguration.cpp  CommandLineConfiguration.h  Communicator.cpp  Communicator.h  Configuration.cpp  Configuration.h  CudaElfFactory.cpp  CudaElfFactory.h  DataGenerationParameters.h  ElfFactory.cpp  ElfFactory.h  MpiGuard.cpp  MpiGuard.h  MpiHelper.cpp  MpiHelper.h  NodeWeightProfiler.cpp  NodeWeightProfiler.h  NullProfiler.h  ProblemStatement.cpp  ProblemStatement.h  Profiler.h  SMPElfFactory.cpp  SMPElfFactory.h  Scheduler.cpp  Scheduler.h  SchedulerFactory.cpp  SchedulerFactory.h  SchedulerTemplate.h  TimingProfiler.cpp  TimingProfiler.h  Utils.h
src/cuda/: CMakeLists.txt  Cublas.cpp  Cublas.h  CublasError.cpp  CublasError.h  CudaError.h  CudaMatrixKernel.cpp  CudaMatrixKernel.h  ErrorHandling.cpp  ErrorHandling.h  Memory.h
src/elves/: CMakeLists.txt  Elf.h  ElfCategory.h  IElf.h
src/elves/common-factorization/: BigInt.h  CMakeLists.txt  FactorizationElf.cpp  FactorizationElf.h
src/elves/cuda-utils/: CMakeLists.txt  CudaError.h  ErrorHandling.cpp  ErrorHandling.h  Memory.h
src/elves/factorization_montecarlo/: CMakeLists.txt  FactorizationScheduler.cpp  FactorizationScheduler.h  MonteCarloFactorizationElf.cpp  MonteCarloFactorizationElf.h  SequentialFactorizer.cpp  SequentialFactorizer.h  SmpFactorizationElf.cpp  SmpFactorizationElf.h
src/elves/factorize/: BigInt.cpp  BigInt.h  CMakeLists.txt  FactorizationElf.cpp  FactorizationElf.h  FactorizationScheduler.cpp  FactorizationScheduler.h  QuadraticSieve.cpp  QuadraticSieve.h
src/elves/matrix/: CMakeLists.txt  Matrix.h  MatrixElf.cpp  MatrixElf.h  MatrixHelper.cpp  MatrixHelper.h  MatrixOnlineScheduler.cpp  MatrixOnlineScheduler.h  MatrixOnlineSchedulingRowwise.cpp  MatrixOnlineSchedulingRowwise.h  MatrixOnlineSchedulingStrategy.h  MatrixOnlineSchedulingStrategyFactory.cpp  MatrixOnlineSchedulingStrategyFactory.h  MatrixScheduler.cpp  MatrixScheduler.h  MatrixSlice.cpp  MatrixSlice.h  MatrixSlicer.cpp  MatrixSlicer.h  MatrixSlicerOnline.cpp  MatrixSlicerOnline.h  MatrixSlicerSquarified.cpp  MatrixSlicerSquarified.h  MismatchedMatricesException.cpp  MismatchedMatricesException.h
src/elves/montecarlo/: CMakeLists.txt  MonteCarloElf.cpp  MonteCarloElf.h  MonteCarloScheduler.cpp  MonteCarloScheduler.h  OthelloExceptions.cpp  OthelloExceptions.h  OthelloField.h  OthelloGamePlay.cpp  OthelloGamePlay.h  OthelloMove.h  OthelloNode.cpp  OthelloNode.h  OthelloResult.cpp  OthelloResult.h  OthelloState.cpp  OthelloState.h  OthelloUtil.cpp  OthelloUtil.h
src/elves/othello_montecarlo/: CMakeLists.txt  Exceptions.cpp  Exceptions.h  Field.h  Move.h  OthelloElf.h  OthelloScheduler.cpp  OthelloScheduler.h  OthelloUtil.cpp  OthelloUtil.h  Result.h  State.cpp  State.h
src/elves/quadratic_sieve/: BlockLanczosResult.cpp  BlockLanczosResult.h  BlockLanczosWrapper.cpp  BlockLanczosWrapper.h  CMakeLists.txt  PrimeFactorization.cpp  PrimeFactorization.h  QuadraticSieve.cpp  QuadraticSieve.h  QuadraticSieveElf.h  QuadraticSieveHelper.cpp  QuadraticSieveHelper.h  QuadraticSieveScheduler.cpp  QuadraticSieveScheduler.h  Relation.h  SparseVector.h  Types.h
src/gold/: CMakeLists.txt  Kernel.cpp  Kernel.h
src/lib/benchmark/: Arguments.cpp  Arguments.h  BenchmarkKernel.h  CMakeLists.txt  InvalidCommandLineException.h  PerformanceEvent.cpp  PerformanceEvent.h  PerformanceEventCount.cpp  PerformanceEventCount.h  main.cpp
src/main/: BenchmarkResults.cpp  BenchmarkResults.h  BenchmarkRunner.cpp  BenchmarkRunner.h  CMakeLists.txt  Configuration.cpp  Configuration.h  CudaElfFactory.cpp  CudaElfFactory.h  ElfFactory.cpp  ElfFactory.h  Main.cpp  MpiGuard.cpp  MpiGuard.h  MpiUtils.h  ProblemStatement.h  SMPElfFactory.cpp  SMPElfFactory.h  Scheduler.cpp  Scheduler.h  SchedulerTemplate.h  Utils.h
src/matrixtool/: CMakeLists.txt  Main.cpp
src/mpi/: CMakeLists.txt  MpiMatrixKernel.cpp  MpiMatrixKernel.h  MpiMatrixMultiplicationBenchmarkKernel.cpp  MpiMatrixMultiplicationBenchmarkKernel.h  MpiStarterKernel.cpp  MpiStarterKernel.h  main.cpp
src/own/: CMakeLists.txt  Kernel.cpp
src/papi_demo/: cpu.cpp  gpu.cu
src/runner/: CMakeLists.txt  Main.cpp  SimpleBenchmarkRunner.cpp  SimpleBenchmarkRunner.h  SimpleConfiguration.cpp  SimpleConfiguration.h  SimpleFactorizationScheduler.cpp  SimpleFactorizationScheduler.h  SimpleMatrixScheduler.cpp  SimpleMatrixScheduler.h  SimpleMonteCarloScheduler.cpp  SimpleMonteCarloScheduler.h  SimpleSchedulerFactory.cpp  SimpleSchedulerFactory.h
src/smp/: CMakeLists.txt  SMPMatrixKernel.cpp  SMPMatrixKernel.h
src/test/: BigIntTest.cpp  CMakeLists.txt  CudaBigIntTest.cpp  CudaBigIntTest.cu  FactorizationTest.cpp  FactorizationTest.h  GoldMatrixElf.cpp  GoldMatrixElf.h  MatrixIntegrationTest.cpp  MatrixIntegrationTest.h  MatrixMultiplyTest.cpp  MatrixMultiplyTest.h  MatrixSlicerOnlineTest.cpp  MatrixSlicerOnlineTest.h  MatrixSlicerSquarifiedTest.cpp  MatrixSlicerSquarifiedTest.h  MatrixSlicerUtil.cpp  MatrixSlicerUtil.h  MatrixSlicingTest.cpp  MatrixSlicingTest.h  OthelloCudaLeafSimulationTest.cpp  OthelloCudaLeafSimulationTest.h  OthelloCudaUtilTest.cpp  OthelloCudaUtilTest.h  OthelloNodeTest.cpp  OthelloNodeTest.h  OthelloStateTest.cpp  OthelloStateTest.h  OthelloUtil.cpp  OthelloUtil.h  Utilities.cpp  Utilities.h  main.cpp
(+130 files in other folders)
