SET(EXECUTABLE_NAME cuda)

# Dependencies
FIND_PACKAGE(CUDA REQUIRED)
	
INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}
	# Add dependencies' include dirs here
)

FILE(GLOB AUTO_SOURCES
    "*.h"
    "*.cpp"
)

# Build executable out of sources
CUDA_ADD_EXECUTABLE(${EXECUTABLE_NAME} ${AUTO_SOURCES})
CUDA_ADD_CUBLAS_TO_TARGET(${EXECUTABLE_NAME})

TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME}
    # Add dependencies' libraries here
    "libbenchmark"
    "libtools"
)    
    
IF(MSVC)
    ADD_DEFINITIONS(/D_CRT_SECURE_NO_WARNINGS /DNOMINMAX /DWIN32_LEAN_AND_MEAN)

    SET_TARGET_PROPERTIES(${EXECUTABLE_NAME}
        PROPERTIES
        LINK_FLAGS "/NODEFAULTLIB:libcmt /SUBSYSTEM:CONSOLE")
ENDIF(MSVC)
