SET(LIBRARY_NAME common-factorization)

# Export library for main subproject
SET(COMMON_FACTORIZATION_LIB ${LIBRARY_NAME} CACHE STRING INTERNAL FORCE)

INCLUDE_DIRECTORIES(
)

FILE(GLOB AUTO_SOURCES
    "*.h"
    "*.cpp"
)

ADD_LIBRARY(${LIBRARY_NAME} SHARED ${AUTO_SOURCES})
ADD_COMMON_MSVC_PROPS(${LIBRARY_NAME})
