INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/
    ${CUDA_TOOLKIT_INCLUDE}
)

FILE(GLOB AUTO_SOURCES
    "*.h"
    "*.cpp"
)

ENABLE_CPP_11()
SET(LIBRARY_NAME cuda-utils)
ADD_LIBRARY(${LIBRARY_NAME} SHARED ${AUTO_SOURCES})

# Export library for main subproject
SET(CUDA_UTILS_LIB ${LIBRARY_NAME} PARENT_SCOPE)

ADD_COMMON_MSVC_PROPS(${LIBRARY_NAME})
