SET(LIBRARY_NAME cuda-utils)

# Export library for main subproject
SET(CUDA_UTILS_LIB ${LIBRARY_NAME} CACHE STRING INTERNAL FORCE)

INCLUDE_DIRECTORIES(
    ${CUDA_TOOLKIT_INCLUDE}
)

FILE(GLOB AUTO_SOURCES
    "*.h"
    "*.cpp"
)

ADD_LIBRARY(${LIBRARY_NAME} SHARED ${AUTO_SOURCES})
ADD_COMMON_MSVC_PROPS(${LIBRARY_NAME})
