INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/
)

FILE(GLOB FACTORIZE_SOURCES
    "*.h"
    "*.cpp"
)

ENABLE_CPP_11()
SET(LIBRARY_NAME factorize)
ADD_LIBRARY(${LIBRARY_NAME} SHARED ${FACTORIZE_SOURCES})

# Export library for main subproject
SET(SHARED_FACTORIZE_LIB ${LIBRARY_NAME} CACHE STRING INTERNAL FORCE)

ADD_COMMON_MSVC_PROPS(${LIBRARY_NAME})

#IF(BUILD_WITH_CUDA)
#    ADD_SUBDIRECTORY(cuda)
#ENDIF()
ADD_SUBDIRECTORY(smp)
