SET(LIBRARY_NAME matrix)

# Export library for main subproject
REGISTER_ELF_LIB(${LIBRARY_NAME})

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/
)

FILE(GLOB MATRIX_SOURCES
    "*.h"
    "*.cpp"
)

ADD_LIBRARY(${LIBRARY_NAME} SHARED ${MATRIX_SOURCES})
ADD_COMMON_MSVC_PROPS(${LIBRARY_NAME})

IF(CMAKE_COMPILER_IS_GNUCXX OR USE_VAMPIR_TRACE)
    ADD_CXX_FLAGS("-O3 -fopenmp -funroll-loops")        ## Optimize
ENDIF()

IF(BUILD_WITH_CUDA)
    ADD_SUBDIRECTORY(cuda)
ENDIF()
ADD_SUBDIRECTORY(smp)
