INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/
)

FILE(GLOB MONTECARLO_SOURCES
    "*.h"
    "*.cpp"
)

ENABLE_CPP_11()
SET(LIBRARY_NAME montecarlo)
ADD_LIBRARY(${LIBRARY_NAME} SHARED ${MONTECARLO_SOURCES})

# Export library for main subproject
SET(SHARED_MONTECARLO_LIB ${LIBRARY_NAME} CACHE STRING INTERNAL FORCE)

ADD_COMMON_MSVC_PROPS(${LIBRARY_NAME})

IF(BUILD_WITH_CUDA)
    ADD_SUBDIRECTORY(cuda)
ENDIF()
ADD_SUBDIRECTORY(smp)
