INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/
)

FILE(GLOB OTHELLO_MONTECARLO_SOURCES
    "*.h"
    "*.cpp"
)

IF(CMAKE_BUILD_TYPE MATCHES "[Dd][Ee][Bb][Uu][Gg]")
    ADD_DEFINITIONS("-DOTHELLO_DEBUG")
ENDIF(CMAKE_BUILD_TYPE MATCHES "[Dd][Ee][Bb][Uu][Gg]")

SET(LIBRARY_NAME montecarlo)
ADD_LIBRARY(${LIBRARY_NAME} SHARED ${OTHELLO_MONTECARLO_SOURCES})

# Export library for main subproject
REGISTER_ELF_LIB(${LIBRARY_NAME})

ADD_COMMON_MSVC_PROPS(${LIBRARY_NAME})

IF(BUILD_WITH_CUDA)
    ADD_SUBDIRECTORY(cuda)
ENDIF()
ADD_SUBDIRECTORY(smp)
