SET(LIBRARY_NAME quadratic-sieve)

# Export library for main subproject
SET(SHARED_QUADRATIC_SIEVE_LIB ${LIBRARY_NAME} CACHE STRING INTERNAL FORCE)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/
)

FILE(GLOB MATRIX_SOURCES
    "*.h"
    "*.cpp"
)

FILE(GLOB MSIEVE_SOURCES
    "lanczos_msieve/*.h"
    "lanczos_msieve/*.c"
)

IF(CMAKE_COMPILER_IS_GNUCXX OR USE_VAMPIR_TRACE)
    ADD_CXX_FLAGS("-O3 -fopenmp -funroll-loops")
ENDIF()

ADD_LIBRARY(${LIBRARY_NAME} STATIC ${MATRIX_SOURCES} ${MSIEVE_SOURCES})
ADD_COMMON_MSVC_PROPS(${LIBRARY_NAME})

ADD_SUBDIRECTORY(smp)

IF(BUILD_WITH_CUDA)
    ADD_SUBDIRECTORY(cuda)
ENDIF()
