SET(LIBRARY_NAME cooda-quadratic-sieve)

# Export library for main subproject
REGISTER_ELF_LIB(${LIBRARY_NAME})

LINK_DIRECTORIES(
    ${CMAKE_CURRENT_BINARY_DIR}
)

# Dependencies
INCLUDE_DIRECTORIES(
    ${CUDA_TOOLKIT_INCLUDE}
    # Add dependencies' include dirs here
)

FILE(GLOB GCC_SOURCES
    "*.h"
    "*.cpp"
)

FILE(GLOB CUDA_SOURCES
    "*.cuh"
    "*.cu"
)

SET(LINKING_MODE SHARED)
SET(CUDA_PROPAGATE_HOST_FLAGS 0)

CUDA_COMPILE(CUDA_OBJECTS ${CUDA_SOURCES} ${LINKING_MODE})

ADD_LIBRARY(${LIBRARY_NAME} ${LINKING_MODE}
    ${GCC_SOURCES}
    ${CUDA_OBJECTS}
)

ADD_COMMON_MSVC_PROPS(${LIBRARY_NAME})
